<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin">

                        <LinearLayout
                            android:id="@+id/container_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/edt_userid"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_userid"
                                android:maxLines="1" />

                            <fragment
                                android:id="@+id/password_fragment"
                                android:name="io.raisehand.formvalidation.PasswordFragment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <fragment
                                android:id="@+id/name_fragment"
                                android:name="io.raisehand.formvalidation.NameFragment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <EditText
                                android:id="@+id/edt_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />

                            <Spinner
                                android:id="@+id/spinner_tech_stacks"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="@dimen/activity_vertical_margin" />

                            <EditText
                                android:id="@+id/edt_ip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_ip"
                                android:maxLines="1" />

                            <EditText
                                android:id="@+id/edt_tel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_tel"
                                android:inputType="phone"
                                android:maxLines="1" />

                            <EditText
                                android:id="@+id/edt_zipcode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_zipcode"
                                android:maxLines="1" />

                            <EditText
                                android:id="@+id/edt_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_year"
                                android:inputType="number"
                                android:maxLines="1" />

                            <EditText
                                android:id="@+id/edt_height"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_height"
                                android:inputType="numberDecimal"
                                android:maxLines="1" />

                            <EditText
                                android:id="@+id/edt_birthday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edt_birthday"
                                android:inputType="text"
                                android:maxLines="1" />

                        </LinearLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/container_text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/til_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edt_email"
                                    android:maxLines="1" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/til_password"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintHorizontal_chainStyle="spread"
                                app:layout_constraintHorizontal_weight="1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toLeftOf="@+id/til_password_confirmation"
                                app:layout_constraintTop_toBottomOf="@+id/til_email">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edt_password"
                                    android:inputType="textPassword"
                                    android:maxLines="1" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/til_password_confirmation"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintHorizontal_weight="1"
                                app:layout_constraintLeft_toRightOf="@+id/til_password"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/til_password">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edt_password_confirmation"
                                    android:inputType="textPassword"
                                    android:maxLines="1" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/til_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/til_password">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edt_year"
                                    android:maxLines="1" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </ScrollView>

                <LinearLayout
                    android:id="@+id/container_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img_success"
                        android:src="@android:drawable/presence_online" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img_success"
                        android:src="@android:drawable/presence_online" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/img_success"
                        android:src="@android:drawable/presence_online" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <Button
                        android:id="@+id/btn_clr"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/btn_clr"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_done"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/btn_done"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/left_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="#111"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp" />

        </androidx.drawerlayout.widget.DrawerLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow" />

    </FrameLayout>

</LinearLayout>